chore: 获取此集合的第一个元素