@@ -280,7 +280,7 @@ public class ApiTestCaseBatchRunService {
             reportId = IDGenerator.nextStr();
         } else {
             // 独立报告，执行到当前任务时初始化报告
-            reportId = initApiReport(runModeConfig, List.of(apiTestCase), queue.getUserId()).get(0).getApiReportId();
+            reportId = initApiReport(runModeConfig, List.of(apiTestCase), queue.getUserId()).getFirst().getApiReportId();
         }
 
         if (apiTestCase == null) {
