@@ -85,7 +85,7 @@ public class NoticeMessageTaskService {
         sqlSession.flushStatements();
         SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
         if (CollectionUtils.isNotEmpty(stringListMap.get(NO_USER_NAMES))) {
-            String message = Translator.get("alert_others") + stringListMap.get(NO_USER_NAMES).get(0) + Translator.get("user.remove");
+            String message = Translator.get("alert_others") + stringListMap.get(NO_USER_NAMES).getFirst() + Translator.get("user.remove");
             return ResultHolder.successCodeErrorInfo(ProjectResultCode.SAVE_MESSAGE_TASK_USER_NO_EXIST.getCode(), message);
         }
         return ResultHolder.success("OK");
@@ -130,7 +130,7 @@ public class NoticeMessageTaskService {
             ProjectRobotExample projectRobotExample = new ProjectRobotExample();
             projectRobotExample.createCriteria().andProjectIdEqualTo(projectId).andPlatformEqualTo(NoticeConstants.Type.IN_SITE);
             List<ProjectRobot> projectRobots = projectRobotMapper.selectByExample(projectRobotExample);
-            return projectRobots.get(0);
+            return projectRobots.getFirst();
         } else {
             return projectRobotMapper.selectByPrimaryKey(robotId);
         }
@@ -503,9 +503,9 @@ public class NoticeMessageTaskService {
         }
         Map<String, List<MessageTask>> messageRobotMap = messageTasks.stream().collect(Collectors.groupingBy(MessageTask::getProjectRobotId));
         if (CollectionUtils.isNotEmpty(messageRobotMap.get(robotId))) {
-            messageTask = messageRobotMap.get(robotId).get(0);
+            messageTask = messageRobotMap.get(robotId).getFirst();
         } else {
-            messageTask = messageTasks.get(0);
+            messageTask = messageTasks.getFirst();
             messageTask.setEnable(false);
             messageTask.setUseDefaultTemplate(true);
             messageTask.setUseDefaultSubject(true);
